Se añadió texto

--- a/Estructura.html
+++ b/Estructura.html
@@ -12,7 +12,7 @@
 	<header style="background-color:limegreen;"> 
       <img id="logo" src="5G.jpg" width="1000px" height="200px"/>
       <h1>SITIO WEB DE 5G</h1>
-        <p>Un sitio web sobre 5G NR</p>
+        <p>Un sitio web sobre Tecnología 5G NR</p>
 		<nav>
 			<ul>
 				<li><a href="index8.html">Inicio</a></li>
